Fix toolbar dropdown menus not visible in slide

--- a/www/slide/slide.less
+++ b/www/slide/slide.less
@@ -77,6 +77,9 @@ body {
 }
 
 
+#cme_toolbox {
+    z-index: 10000;
+}
 #editorContainer {
     flex: 1;
     display: flex;
